# SPH_plugin

./: .gitmodules  CMakeLists.txt  LICENSE  PluginInfo.json  README.md  vcpkg.json
src/: ComputeEmbeddingWrapper.cpp  ComputeEmbeddingWrapper.h  ComputeHierarchyWrapper.cpp  ComputeHierarchyWrapper.h  DimensionSelectionAction.cpp  DimensionSelectionAction.h  RefineAction.cpp  RefineAction.h  RefinedSelectionMapping.cpp  RefinedSelectionMapping.h  SettingsAction.cpp  SettingsAction.h  SettingsAdvancedAction.cpp  SettingsAdvancedAction.h  SettingsHierarchyAction.cpp  SettingsHierarchyAction.h  SettingsTsneAction.cpp  SettingsTsneAction.h  SphPlugin.cpp  SphPlugin.h  TsneComputationAction.cpp  TsneComputationAction.h  Utils.cpp  Utils.h
